--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,92 @@
+* {
+  box-sizing: border-box; }
 
+body {
+  background: #a593e0;
+  font-family: 'Raleway', sans-serif; }
+
+.button {
+  margin: 0 auto;
+  display: block;
+  padding: 1rem 0;
+  margin-bottom: 15px;
+  width: 70%;
+  background: #a593e0;
+  border: 0;
+  cursor: pointer;
+  font-weight: bold;
+  border-bottom: 0.5rem solid #544b74;
+  border-radius: 16px;
+  text-align: center;
+  color: white;
+  font-size: 3rem; }
+
+.cf:before,
+.cf:after {
+  content: '';
+  display: table; }
+
+.cf:after {
+  clear: both; }
+
+.row {
+  width: 100%; }
+
+.col_1_3 {
+  width: 186px;
+  max-width: 31%;
+  float: left; }
+
+.col_1_2 {
+  width: 180px;
+  max-width: 45%;
+  float: left;
+  margin-right: 20px; }
+  .col_1_2:last-child {
+    margin-right: 0; }
+
+.container {
+  width: 1000px;
+  max-width: 100%;
+  margin: 0 auto; }
+  .container #calculator {
+    margin-top: 2rem;
+    background: #566270;
+    border-bottom: 6px solid #2b3138;
+    border-radius: 16px;
+    padding: 2rem 0; }
+    .container #calculator .wrapper {
+      width: 900px;
+      max-width: 90%;
+      margin: 0 auto; }
+      .container #calculator .wrapper #screen {
+        width: 100%;
+        height: 8rem;
+        background: #fffff3;
+        border: 10px solid #e0e3da;
+        border-radius: 16px; }
+      .container #calculator .wrapper #desc {
+        width: 100%;
+        color: #fffff3;
+        font-weight: bold;
+        margin-bottom: 20px; }
+        .container #calculator .wrapper #desc #from {
+          float: left; }
+        .container #calculator .wrapper #desc #to {
+          float: right; }
+      .container #calculator .wrapper #buttons {
+        width: 100%;
+        margin-bottom: 20px; }
+        .container #calculator .wrapper #buttons #numbers {
+          width: 600px;
+          max-width: 60%;
+          float: left; }
+        .container #calculator .wrapper #buttons #letters {
+          display: block;
+          width: 400px;
+          max-width: 40%;
+          float: right; }
+          .container #calculator .wrapper #buttons #letters:last-child {
+            margin-right: 0; }
 
 /*# sourceMappingURL=style.css.map */
