--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,25 @@
 
 body {
   background: #a593e0;
-  font-family: 'Raleway', sans-serif; }
+  font-family: 'Lato', sans-serif; }
 
 .button {
+  margin: 0 auto;
+  display: block;
+  padding: 1rem 0;
+  margin-bottom: 15px;
+  width: 70%;
+  background: #a593e0;
+  border: 0;
+  cursor: pointer;
+  font-weight: bold;
+  border-bottom: 0.5rem solid #544b74;
+  border-radius: 16px;
+  text-align: center;
+  color: white;
+  font-size: 3rem; }
+
+.special_button {
   margin: 0 auto;
   display: block;
   padding: 1rem 0;
@@ -61,10 +77,20 @@ body {
       margin: 0 auto; }
       .container #calculator .wrapper #screen {
         width: 100%;
-        height: 8rem;
+        min-height: 8rem;
         background: #fffff3;
         border: 10px solid #e0e3da;
-        border-radius: 16px; }
+        border-radius: 16px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: right; }
+        .container #calculator .wrapper #screen #display {
+          font-weight: normal;
+          padding: 0 1.5rem;
+          width: 100%;
+          max-width: 100%;
+          word-wrap: break-word; }
       .container #calculator .wrapper #desc {
         width: 100%;
         color: #fffff3;
