Added function of disabled buttons

--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,8 @@ body {
   padding: 1rem 0;
   margin-bottom: 15px;
   width: 70%;
-  background: #a593e0;
+  background: #2b3138;
   border: 0;
-  cursor: pointer;
   font-weight: bold;
   border-bottom: 0.5rem solid #544b74;
   border-radius: 16px;
