--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,9 +20,8 @@ body {
 	padding: 1rem 0;
 	margin-bottom: 15px;
 	width: 70%;
-	background: $violet;
+	background: $darkest_grey;
 	border: 0;
-	cursor: pointer;
 	font-weight: bold;
 	border-bottom: 0.5rem solid $darkest_violet;
 	border-radius: 16px;
