--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,63 @@
 * {
   box-sizing: border-box; }
 
+html,
+body {
+  height: 100%; }
+
 body {
   background: #a593e0;
   font-family: 'Lato', sans-serif; }
 
 .button {
-  margin: 0 auto;
-  display: block;
-  padding: 1rem 0;
-  margin-bottom: 15px;
+  position: relative;
   width: 70%;
-  border: 0;
-  background: #544b74;
-  font-weight: bold;
-  border-bottom: 0.5rem solid #544b74;
-  border-radius: 16px;
-  text-align: center;
-  color: white;
-  font-size: 3rem; }
-
-.special_button {
-  margin: 0 auto;
+  color: #FFF;
   display: block;
-  padding: 1rem 0;
-  margin-bottom: 15px;
-  width: 70%;
+  text-decoration: none;
+  margin: 1rem auto;
+  border-radius: 5px;
   background: #a593e0;
   border: 0;
-  cursor: pointer;
-  font-weight: bold;
-  border-bottom: 0.5rem solid #544b74;
-  border-radius: 16px;
   text-align: center;
-  color: white;
-  font-size: 3rem; }
+  padding: 20px 30px;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  transition: all 0.1s;
+  -webkit-box-shadow: 0px 9px 0px #544b74;
+  -moz-box-shadow: 0px 9px 0px #544b74;
+  box-shadow: 0px 9px 0px #544b74; }
+  .button:active {
+    -webkit-box-shadow: 0px 2px 0px #544b74;
+    -moz-box-shadow: 0px 2px 0px #544b74;
+    box-shadow: 0px 2px 0px #544b74;
+    position: relative;
+    top: 7px; }
+
+.special_button {
+  position: relative;
+  width: 3rem;
+  color: #FFF;
+  display: inline-block;
+  text-decoration: none;
+  margin: 1rem auto;
+  border-radius: 5px;
+  background: #a593e0;
+  border: 0;
+  text-align: center;
+  padding: 1rem 0;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
+  transition: all 0.1s;
+  -webkit-box-shadow: 0px 9px 0px #544b74;
+  -moz-box-shadow: 0px 9px 0px #544b74;
+  box-shadow: 0px 9px 0px #544b74; }
+  .special_button:active {
+    -webkit-box-shadow: 0px 2px 0px #544b74;
+    -moz-box-shadow: 0px 2px 0px #544b74;
+    box-shadow: 0px 2px 0px #544b74;
+    position: relative;
+    top: 7px; }
 
 .cf:before,
 .cf:after {
@@ -60,16 +83,42 @@ body {
   .col_1_2:last-child {
     margin-right: 0; }
 
+#about {
+  height: 100%;
+  background: #fffff3;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #544b74;
+  font-size: 1rem; }
+
+#how_to {
+  height: 100%;
+  background: #2b3138;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fffff3;
+  font-size: 1rem; }
+  #how_to ul {
+    padding: 0; }
+
 .container {
-  width: 1000px;
+  width: 800px;
   max-width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 5.5rem 0;
+  height: 100%; }
   .container #calculator {
-    margin-top: 2rem;
     background: #566270;
     border-bottom: 6px solid #2b3138;
     border-radius: 16px;
-    padding: 2rem 0; }
+    padding: 1.5rem 0;
+    text-align: center; }
     .container #calculator .wrapper {
       width: 900px;
       max-width: 90%;
@@ -89,7 +138,8 @@ body {
           padding: 0 1.5rem;
           width: 100%;
           max-width: 100%;
-          word-wrap: break-word; }
+          word-wrap: break-word;
+          text-transform: uppercase; }
       .container #calculator .wrapper #desc {
         width: 100%;
         color: #fffff3;
